<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.app</groupId>
    <artifactId>app-customize</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>app Maven Webapp</name>
    <!-- FIXME change it to the project's website -->
    <url>http://www.example.com</url>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>

        <sonar.projectKey>MyProjectKey</sonar.projectKey>
        <sonar.projectName>My Project</sonar.projectName>
        <sonar.language>java</sonar.language>
        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.sources>src/main</sonar.sources>
        <sonar.tests>TestSources</sonar.tests>
        <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
        <sonar.host.url>http://localhost:9000</sonar.host.url>
        <sonar.login>5daad91563a6477d08db7ba6b71f6cc3b957e0bb</sonar.login>
        <sonar-jacoco-listeners.version>5.9.1.16423</sonar-jacoco-listeners.version>

        <jacoco.version>0.8.2</jacoco.version>
        <!--<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>-->
        <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
        <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>

        <!-- After adding login and url
        you can use this command
        mvn clean jacoco:prepare-agent install jacoco:report -Pcoverage sonar:sonar-->
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts-core</artifactId>
            <version>1.3.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts-taglib</artifactId>
            <version>1.3.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts-tiles</artifactId>
            <version>1.3.10</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>strutstestcase</groupId>
            <artifactId>strutstestcase</artifactId>
            <version>2.1.4-1.2-2.4</version>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring</artifactId>
            <version>2.5.6</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>2.5.6</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-struts</artifactId>
            <version>2.0.8</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.1</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.sonarsource.java</groupId>
            <artifactId>sonar-jacoco-listeners</artifactId>
            <version>5.9.1.16423</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>app_</finalName>
        <testSourceDirectory>TestSources</testSourceDirectory>
        <testOutputDirectory>target/test-classes</testOutputDirectory>
        <sourceDirectory>JavaSource</sourceDirectory>
        
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>WebContent</directory>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>

                <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
                    <plugins>
                        <plugin>
                            <groupId>org.jacoco</groupId>
                            <artifactId>jacoco-maven-plugin</artifactId>
                            <version>0.8.2</version>
                            <executions>
                                <execution>
                                    <id>prepare-ut-agent</id>
                                    <phase>process-test-classes</phase>
                                    <goals>
                                        <goal>prepare-agent</goal>
                                    </goals>
                                </execution>
                                <execution>
                                    <id>prepare-it-agent</id>
                                    <phase>pre-integration-test</phase>
                                    <goals>
                                        <goal>prepare-agent</goal>
                                    </goals>
                                </execution>
                                <execution>
                                    <id>jacoco-site</id>
                                    <phase>package</phase>
                                    <goals>
                                        <goal>report</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.6.1</version>
                            <configuration>
                                <source>1.6</source>
                                <target>1.6</target>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>2.22.1</version>

                        </plugin>


                        <plugin>
                            <groupId>org.mortbay.jetty</groupId>
                            <artifactId>maven-jetty-plugin</artifactId>
                            <version>6.1.10</version>
                            <configuration>
                                <scanIntervalSeconds>10</scanIntervalSeconds>
                                <connectors>
                                    <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                                        <port>8080</port>
                                        <maxIdleTime>60000</maxIdleTime>
                                    </connector>
                                </connectors>
                                <stopKey>STOP</stopKey>
                                <stopPort>8005</stopPort>
                            </configuration>
                        </plugin>
                    </plugins>

                </pluginManagement>
            </build>

        </profile>
    </profiles>


    <!-- coverage -->
    <!--<profiles>-->
    <!--<profile>-->
    <!--<id>coverage</id>-->
    <!--<build>-->

    <!--<plugins>-->
    <!--<plugin>-->
    <!--<groupId>org.jacoco</groupId>-->
    <!--<artifactId>jacoco-maven-plugin</artifactId>-->
    <!--<version>${jacoco.version}</version>-->
    <!--<executions>-->
    <!--&lt;!&ndash; Prepares a variable, jacoco.agent.ut.arg, that contains the info-->
    <!--to be passed to the JVM hosting the code being tested. &ndash;&gt;-->
    <!--<execution>-->
    <!--<id>prepare-ut-agent</id>-->
    <!--<phase>process-test-classes</phase>-->
    <!--<goals>-->
    <!--<goal>prepare-agent</goal>-->
    <!--</goals>-->
    <!--<configuration>-->
    <!--<destFile>${sonar.jacoco.reportPath}</destFile>-->
    <!--<propertyName>jacoco.agent.ut.arg</propertyName>-->
    <!--<append>true</append>-->
    <!--</configuration>-->
    <!--</execution>-->
    <!--&lt;!&ndash; Prepares a variable, jacoco.agent.it.arg, that contains the info-->
    <!--to be passed to the JVM hosting the code being tested. &ndash;&gt;-->
    <!--<execution>-->
    <!--<id>prepare-it-agent</id>-->
    <!--<phase>pre-integration-test</phase>-->
    <!--<goals>-->
    <!--<goal>prepare-agent</goal>-->
    <!--</goals>-->
    <!--<configuration>-->
    <!--<destFile>${sonar.jacoco.itReportPath}</destFile>-->
    <!--<propertyName>jacoco.agent.it.arg</propertyName>-->
    <!--<append>true</append>-->
    <!--</configuration>-->
    <!--</execution>-->
    <!--</executions>-->
    <!--</plugin>-->
    <!--<plugin>-->
    <!--<groupId>org.apache.maven.plugins</groupId>-->
    <!--<artifactId>maven-surefire-plugin</artifactId>-->
    <!--<configuration>-->
    <!--<argLine>${jacoco.agent.ut.arg}</argLine>-->
    <!--&lt;!&ndash; Specific to generate mapping between tests and covered code &ndash;&gt;-->
    <!--<properties>-->
    <!--<property>-->
    <!--<name>listener</name>-->
    <!--<value>org.sonar.java.jacoco.JUnitListener</value>-->
    <!--</property>-->
    <!--</properties>-->
    <!--&lt;!&ndash; test failure ignore &ndash;&gt;-->
    <!--<testFailureIgnore>true</testFailureIgnore>-->
    <!--</configuration>-->
    <!--</plugin>-->

    <!--<plugin>-->
    <!--<groupId>org.apache.maven.plugins</groupId>-->
    <!--<artifactId>maven-failsafe-plugin</artifactId>-->
    <!--<configuration>-->
    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m-->
    <!--</argLine>-->
    <!--&lt;!&ndash; Specific to generate mapping between tests and covered code &ndash;&gt;-->
    <!--<properties>-->
    <!--<property>-->
    <!--<name>listener</name>-->
    <!--<value>org.sonar.java.jacoco.JUnitListener</value>-->
    <!--</property>-->
    <!--</properties>-->
    <!--&lt;!&ndash; Let's put failsafe reports with surefire to have access to tests-->
    <!--failures/success reports in sonar &ndash;&gt;-->
    <!--<reportsDirectory>${project.build.directory}/surefire-reports-->
    <!--</reportsDirectory>-->
    <!--</configuration>-->
    <!--</plugin>-->

    <!--</plugins>-->
    <!--</build>-->
    <!--<dependencies>-->
    <!--<dependency>-->
    <!--<groupId>org.codehaus.sonar-plugins.java</groupId>-->
    <!--<artifactId>sonar-jacoco-listeners</artifactId>-->
    <!--<version>${sonar-jacoco-listeners.version}</version>-->
    <!--<scope>test</scope>-->
    <!--</dependency>-->
    <!--</dependencies>-->
    <!--</profile>-->
    <!--&lt;!&ndash; Integraton tests &ndash;&gt;-->
    <!--<profile>-->
    <!--<id>run-its</id>-->
    <!--<build>-->
    <!--<plugins>-->
    <!--<plugin>-->
    <!--<groupId>org.apache.maven.plugins</groupId>-->
    <!--<artifactId>maven-failsafe-plugin</artifactId>-->
    <!--<executions>-->
    <!--<execution>-->
    <!--<id>integration-test</id>-->
    <!--<phase>integration-test</phase>-->
    <!--<goals>-->
    <!--<goal>integration-test</goal>-->
    <!--</goals>-->
    <!--</execution>-->
    <!--<execution>-->
    <!--<id>verify</id>-->
    <!--<phase>verify</phase>-->
    <!--<goals>-->
    <!--<goal>verify</goal>-->
    <!--</goals>-->
    <!--</execution>-->
    <!--</executions>-->
    <!--</plugin>-->
    <!--</plugins>-->
    <!--</build>-->
    <!--</profile>-->
    <!--</profiles>-->
</project>
